Enhance ExtremeXPExperimentService to fetch and populate metric definitions for experiments